[tool.poetry]
name = "court_detection"
version = "0.1.0"
description = ""
authors = ["oroshi <oroshinekko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
